// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info component renders Info component 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        developer:
      </div>
      <div>
        Front End
      </div>
    </div>
    <div>
      <div>
        camera:
      </div>
      <div>
        Canon
      </div>
    </div>
    <div>
      <div>
        developer:
      </div>
      <div>
        [object Object]
      </div>
    </div>
    <div>
      <div>
        headphones:
      </div>
      <div>
        Panasonic
      </div>
    </div>
    <div>
      <div>
        keyboard:
      </div>
      <div>
        A4Tech
      </div>
    </div>
    <div>
      <div>
        microphone:
      </div>
      <div>
        Sven
      </div>
    </div>
    <div>
      <div>
        monitor:
      </div>
      <div>
        ViewSonic
      </div>
    </div>
    <div>
      <div>
        mouse:
      </div>
      <div>
        Logitech
      </div>
    </div>
    <div>
      <div>
        number:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        openSpaceNumber:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        pc:
      </div>
      <div>
        Evo
      </div>
    </div>
    <div>
      <div>
        __v:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        _id:
      </div>
      <div>
        1
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Info component renders Info without developer 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div>
        developer:
      </div>
      <div>
        empty
      </div>
    </div>
    <div>
      <div>
        camera:
      </div>
      <div>
        Canon
      </div>
    </div>
    <div>
      <div>
        developer:
      </div>
      <div>
        null
      </div>
    </div>
    <div>
      <div>
        headphones:
      </div>
      <div>
        Panasonic
      </div>
    </div>
    <div>
      <div>
        keyboard:
      </div>
      <div>
        A4Tech
      </div>
    </div>
    <div>
      <div>
        microphone:
      </div>
      <div>
        Sven
      </div>
    </div>
    <div>
      <div>
        monitor:
      </div>
      <div>
        ViewSonic
      </div>
    </div>
    <div>
      <div>
        mouse:
      </div>
      <div>
        Logitech
      </div>
    </div>
    <div>
      <div>
        number:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        openSpaceNumber:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        pc:
      </div>
      <div>
        Evo
      </div>
    </div>
    <div>
      <div>
        __v:
      </div>
      <div>
        1
      </div>
    </div>
    <div>
      <div>
        _id:
      </div>
      <div>
        1
      </div>
    </div>
  </div>
</DocumentFragment>
`;
